sample/error/eval_nd-var_module.bfr
import "../misc/import_b.bfr" as B

let _ = B:c

codegen []